Fix issue with duplicating all label types when duplicating a survey